[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Levels/Level0.gd" type="Script" id=1]
[ext_resource path="res://Assets/Temp/Room.png" type="Texture" id=2]
[ext_resource path="res://Src/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Guard/Guard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Camera/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Staircase/Staircase.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/Tresor/Tresor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Src/Door/Door.tscn" type="PackedScene" id=8]

[node name="Level0" type="Node2D"]
script = ExtResource( 1 )

[node name="DummyBuilding" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 304, 253 )

[node name="Guard" parent="." instance=ExtResource( 4 )]
position = Vector2( 376, 205 )

[node name="Camera" parent="." instance=ExtResource( 5 )]
position = Vector2( 408, 264 )

[node name="Camera2" parent="." instance=ExtResource( 5 )]
position = Vector2( 208, 168 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Hello Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="."]
margin_left = 336.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 28.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMusic" type="Button" parent="."]
margin_left = 512.0
margin_top = 8.0
margin_right = 608.0
margin_bottom = 28.0
text = "ToggleMusic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="Button" parent="."]
margin_left = 408.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 28.0
text = "ToggleSound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Staircase" parent="." instance=ExtResource( 6 )]
position = Vector2( 424, 256 )

[node name="Staircase2" parent="." instance=ExtResource( 6 )]
position = Vector2( 256, 208 )

[node name="Tresor" parent="." instance=ExtResource( 7 )]
position = Vector2( 368, 156 )

[node name="Door" parent="." instance=ExtResource( 8 )]
position = Vector2( 360.063, 228.824 )
connected_door_path = NodePath("../Door2")

[node name="Door2" parent="." instance=ExtResource( 8 )]
position = Vector2( 281.671, 135.212 )
connected_door_path = NodePath("../Door")
[connection signal="button_up" from="ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="ButtonMusic" to="." method="_on_ButtonMusic_button_up"]
[connection signal="button_up" from="ButtonSound" to="." method="_on_ButtonSound_button_up"]
